Fixed list page scrolling on mobile

--- a/web/src/components/ListBodyMobile/style.scss
+++ b/web/src/components/ListBodyMobile/style.scss
@@ -6,6 +6,7 @@
         display: flex;
         flex: 1 1 auto;
         flex-flow: column;
+        min-height: 0;
 
         .list-ul {
             flex: 1 1 auto;
