--- a/web/src/containers/PageList/style.scss
+++ b/web/src/containers/PageList/style.scss
@@ -195,6 +195,7 @@
     .list-insert {
         display: flex;
         flex-flow: column;
+        min-height: 0;
         
         .list-head {
             display: flex;
